# packet-bridge

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
apps/: broadcaster.cpp  listener.cpp  receiver.cpp  sender.cpp
docs/: architecture.md  protocol.md  testing.md
include/common/: constants.hpp  logger.hpp
include/crypto/: sha256.hpp
include/discovery/: discovery_message.hpp  discovery_service.hpp  peer.hpp
include/net/: endpoint.hpp  protocol.hpp  socket_runtime.hpp  socket_utils.hpp  tcp_server.hpp  tcp_socket.hpp  udp_socket.hpp
include/transfer/: checkpoint.hpp  chunk_codec.hpp  continuation_codec.hpp  file_utils.hpp  hash_codec.hpp  manifest_codec.hpp  progress_tracker.hpp  transfer_session.hpp
src/common/: logger.cpp
src/crypto/: sha256.cpp
src/discovery/: discovery_message.cpp
src/net/: endpoint.cpp  socket_runtime.cpp  socket_utils.cpp  tcp_server.cpp  tcp_socket.cpp  udp_socket.cpp
src/transfer/: checkpoint.cpp  chunk_codec.cpp  continuation_codec.cpp  file_utils.cpp  hash_codec.cpp  manifest_codec.cpp  progress_tracker.cpp
tests/: packetbridge_tests.cpp
